@@ -23,6 +23,9 @@ of checkers</a>.
 To <a href="http://types.cs.washington.edu/checker-framework/current/checker-framework-manual.html#installation">install the Checker Framework</a>, download and unzip
 the Checker Framework distribution:
 <a href="current/checker-framework-1.9.13.zip"><!-- checker-framework-zip-version -->checker-framework-1.9.13.zip<!-- /checker-framework-zip-version --></a>.<br/>
+Or, the
+<a href="http://eisop.uwaterloo.ca/live/">Checker Framework Live Demo</a>
+webpage lets you try the Checker Framework without installing it.
 </p>
 
 <p>
