@@ -53,7 +53,10 @@ instructions and tutorial</b></a>.
       </li>
 
       <li>
-        <a href="current/checker-framework-manual.html#installation">Installation instructions</a>
+        <a href="current/checker-framework-manual.html#installation">Installation instructions</a><br/>
+        or, try it without installation at the
+        <a href="http://eisop.uwaterloo.ca/live/">Checker Framework Live Demo</a>
+        webpage
       </li>
 
       <li>
