@@ -178,6 +178,8 @@ This section describes how to install the Checker Framework.
 (If you wish to use the Checker Framework from Eclipse, see the Checker
 Framework Eclipse Plugin webpage instead:
 \url{http://types.cs.washington.edu/checker-framework/eclipse/}.)
+(If you wish to try the Checker Framework without installing it, use the
+\href{http://eisop.uwaterloo.ca/live/}{Checker Framework Live Demo} webpage.}
 \end{sloppypar}
 
 The Checker Framework release contains everything that you need, both to
@@ -434,7 +436,8 @@ Additional topics that apply to all checkers are covered later in the manual:
 Finally, there is a
 \ahreforurl{http://types.cs.washington.edu/checker-framework/tutorial/}{tutorial}
 that walks you through using the Checker Framework in Eclipse or on the
-command line, and a separate <a href="https://github.com/glts/safer-spring-petclinic/wiki">Nullness Checker tutorial</a>.
+command line, and a separate
+\ahreforurl{https://github.com/glts/safer-spring-petclinic/wiki}{Nullness Checker tutorial}.
 
 % The annotations have to be on your classpath even when you are not using
 % the -processor, because of the existence of the import statement for
